# Cminusf-Compiler

./: CMakeLists.txt  README.md
Documentations/common/: LightIR.md  cminusf.md  logging.md
Documentations/lab1/: README.md
Documentations/lab2/: README.md  readings.md
Documentations/lab3/: README.md
Documentations/lab4/: README.md
Documentations/lab5/: CodeReading.md  README.md
Reports/lab1/: report.md
Reports/lab2/: report.md
Reports/lab3/: report.md  team.txt
Reports/lab4/: contribution.md  eval_result  report.md
Reports/lab5/: contribution.md  report-phase1.md  report-phase2.md  score
include/: ast.hpp  cminusf_builder.hpp  lexical_analyzer.h  logging.hpp  syntax_tree.h
include/lightir/: BasicBlock.h  Constant.h  Function.h  GlobalVariable.h  IRBuilder.h  IRprinter.h  Instruction.h  Module.h  Type.h  User.h  Value.h
include/optimization/: ActiveVars.hpp  ConstPropagation.hpp  Dominators.h  LoopInvHoist.hpp  LoopSearch.hpp  Mem2Reg.hpp  PassManager.hpp
src/: CMakeLists.txt
src/cminusfc/: CMakeLists.txt  cminusf_builder.cpp  cminusfc.cpp
src/common/: CMakeLists.txt  ast.cpp  logging.cpp  syntax_tree.c
src/io/: CMakeLists.txt  io.c
src/lexer/: CMakeLists.txt  lexical_analyzer.l
src/lightir/: BasicBlock.cpp  CMakeLists.txt  Constant.cpp  Function.cpp  GlobalVariable.cpp  IRprinter.cpp  Instruction.cpp  Module.cpp  Type.cpp  User.cpp  Value.cpp
src/optimization/: ActiveVars.cpp  CMakeLists.txt  ConstPropagation.cpp  Dominators.cpp  (+3 more)
tests/: CMakeLists.txt  test_ast.cpp  test_logging.cpp
tests/lab3/: CMakeLists.txt
tests/lab3/c_cases/: assign.c  fun.c  if.c  while.c
tests/lab3/stu_cpp/: assign_generator.cpp  fun_generator.cpp  if_generator.cpp  while_generator.cpp
tests/lab3/stu_ll/: assign_hand.ll  fun_hand.ll  if_hand.ll  while_hand.ll
tests/lab3/ta_gcd/: gcd_array.c  gcd_array_generator.cpp
(+116 files in other folders)
